--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,25 @@
   <body>
     <header class="row">
       <div class="col-3">
-        LOGO
+        <div class="circle">
+          <br />
+          You know
+          <br />
+          you need
+          <br />
+          to code
+        </div>
       </div>
-      <div class="col-4"
+      <div class="col-4 slogan"
 
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
+
+    <hr />
 
     <br class="clear" />
     <%= yield %>
